--- a/lojavirtual/pom.xml
+++ b/lojavirtual/pom.xml
@@ -51,6 +51,34 @@
 		<version>2.0</version> 
 		<scope>compile</scope> 
 		</dependency>
+		<dependency>
+    <groupId>org.hibernate.javax.persistence</groupId>
+    <artifactId>hibernate-jpa-2.1-api</artifactId>
+    <version>1.0.0.Draft-16</version>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
+    <groupId>javax.transaction</groupId>
+    <artifactId>javax.transaction-api</artifactId>
+    <version>1.2</version>
+     <scope>provided</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>4.3.10.Final</version>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>4.3.10.Final</version>
+    <scope>provided</scope>
+</dependency>
+		
   </dependencies>
   <dependencyManagement>
     <dependencies>
