--- a/lojavirtual/pom.xml
+++ b/lojavirtual/pom.xml
@@ -39,6 +39,16 @@
     	<version>6.0</version>
     </dependency>
     <dependency>
+    <groupId>org.apache.shiro</groupId>
+    <artifactId>shiro-core</artifactId>
+    <version>1.3.2</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.shiro</groupId>
+    <artifactId>shiro-web</artifactId>
+    <version>1.3.2</version>
+</dependency>
+    <dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
